Fixed wrapping in lists

--- a/src/editor/theme.scss
+++ b/src/editor/theme.scss
@@ -21,4 +21,4 @@ $f_h2: "Droid Sans"; // Other Headers
 $fontsize: 17px;  // default font-size
 $fontratio: 1.61803398875; // Ratio from font-size per level
 
-$indent: 50px; // Indentation for lists
+$indent: 40px; // Indentation for lists
